<resources>
    <string name="app_name">Motivational Quotes | Inspiring</string>
    <string name="quotation_mark_start">“</string>
    <string name="quotation_mark_end">”</string>
    <string name="category_text_navigation">Category</string>
    <string name="favorite_text_navigation">Favorite</string>
    <string name="quotes_text_navigation">Quotes</string>
    <string name="categories">Categories</string>
    <string name="by_unknown">Unknown</string>
    <string name="create">Create</string>
    <string name="author_edit_text">Author</string>
    <string name="quote_edit_text">Quote</string>
    <string name="add_button_text">add</string>
    <string name="cancel_button">Cancel</string>
    <string name="yes_choice">Yes</string>
    <string name="no_choice">No</string>
</resources>