<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CreateFragment">

    <TextView
        android:id="@+id/layout_fragment_create_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create"
        android:textColor="@color/titleTextColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_view_own_quotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:listSelector="@android:color/transparent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:smoothScrollbar="true"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/cardOrange"
            android:elevation="10dp"
            android:src="@drawable/add_icon"
            app:backgroundTint="@color/titleTextColor" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/titleTextColor"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/create"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="160"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    >
                    <EditText
                        android:id="@+id/text_quote_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:autofillHints="@string/quote_edit_text"
                        android:backgroundTint="@color/titleTextColor"
                        android:hint="@string/quote_edit_text"
                        android:inputType="textMultiLine"
                        android:lines="2"
                        android:maxLength="160"
                        android:maxLines="2"
                        android:scrollbars="vertical"
                        android:textColor="@color/titleTextColor"
                        android:textColorHint="@color/cardGrey"
                        android:textCursorDrawable="@color/cardLightBlue" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    >
                <EditText
                    android:id="@+id/text_author_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:autofillHints="@string/author_edit_text"
                    android:backgroundTint="@color/titleTextColor"
                    android:hint="@string/author_edit_text"
                    android:inputType="text"
                    android:maxLines="2"
                    android:lines="2"
                    android:maxLength="25"
                    android:textColor="@color/titleTextColor"
                    android:textColorHint="@color/cardGrey"
                    android:textCursorDrawable="@color/cardLightBlue" />
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                        <Button
                            android:id="@+id/cancelButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginStart="10dp"
                            android:text="@string/cancel_button"
                            android:textColor="@color/colorPrimary"
                            android:background="@color/titleTextColor"
                            />
                        <Button
                            android:textColor="@color/colorPrimary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:id="@+id/addButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/titleTextColor"
                            android:text="@string/add_button_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>